--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My First Website</title>
-  <style>
-    body {
-      background-color: #f0f0f0;
-      font-family: Arial;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      color: darkblue;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pranay's First Website</title>
 </head>
 <body>
-  <h1>Hello, I’m Pranay!</h1>
-  <p>This is my first free website using GitHub Pages!</p>
+    <header>
+        <h1>Welcome to My First Website!</h1>
+        <p>Hi, I'm Pranay! This is my first free website using GitHub Pages.</p>
+    </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p>Here you can add a short introduction about yourself. What do you do? What are your hobbies or interests?</p>
+    </section>
+
+    <section>
+        <h2>Contact</h2>
+        <p>If you'd like to reach out, feel free to email me at <a href="mailto:pranay@example.com">pranay@example.com</a></p>
+    </section>
+
+    <footer>
+        <p>© 2025 Pranay. All rights reserved.</p>
+    </footer>
 </body>
 </html>
