--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
     <header>
         <h1>Welcome to My First Website!</h1>
         <p>Hi, I'm Pranay! This is my first free website using GitHub Pages.</p>
